tests/gabc-dump/should-fail/bad-macro.gabc
name: bad macro;
def-m1: macro;
%%
(c3) g(g[nm2])
